# weather-cli

./: Cargo.toml  README.md
docs/: .gitignore  ai-prompt-documentation  toolkit.md
src/: main.rs
src/api/: clients.rs
src/models/: mod.rs  weather.rs  weather_new.rs
src/utils/: display.rs  display_clean.rs  display_templates.rs  formatters.rs  formatters_new.rs  mod.rs  server.rs  web.rs
