[package]
name = "weather-cl"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
console = "0.15"
actix-web = "4.4"
actix-rt = "2.9"
webbrowser = "0.8"
